// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Ticket tailor webhook stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuApiGateway5xxPercentageAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "tickettailorwebhooklambdatickettailorwebhookCODEEndpoint157D6C1F": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "tickettailorwebhooklambdatickettailorwebhookCODEDeploymentStageCODE4D82F771",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGateway4XXAlarmCDKC83EACCA": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - Ticket tailor webhook received an invalid request. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "TICKET-TAILOR-WEBHOOK-CODE API gateway 4XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "ticket-tailor-webhook-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ApiGatewayHigh5xxPercentageAlarmTickettailorwebhook77367DFB": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": "ticket-tailor-webhook exceeded 5% error rate",
        "AlarmName": "High 5XX error percentage from ticket-tailor-webhook (ApiGateway) in CODE",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "100*m1/m2",
            "Id": "expr_1",
            "Label": "% of 5XX responses served for ticket-tailor-webhook",
          },
          {
            "Id": "m1",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "ticket-tailor-webhook-CODE",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m2",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "ticket-tailor-webhook-CODE",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "SampleCount",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "S3inlinepolicy3B07399A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/membership/CODE/ticket-tailor-webhook/",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicy3B07399A",
        "Roles": [
          {
            "Ref": "tickettailorwebhooklambdaServiceRole8D9E481D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "tickettailorwebhooklambdaEF743C00": {
      "DependsOn": [
        "tickettailorwebhooklambdaServiceRoleDefaultPolicyE88BB4F9",
        "tickettailorwebhooklambdaServiceRole8D9E481D",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/ticket-tailor-webhook/ticket-tailor-webhook.zip",
        },
        "Description": "An API Gateway triggered lambda generated in the support-service-lambdas repo",
        "Environment": {
          "Variables": {
            "APP": "ticket-tailor-webhook",
            "App": "ticket-tailor-webhook",
            "STACK": "membership",
            "STAGE": "CODE",
            "Stack": "membership",
            "Stage": "CODE",
          },
        },
        "FunctionName": "ticket-tailor-webhook-CODE",
        "Handler": "index.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdaServiceRole8D9E481D",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "ticket-tailor-webhook",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "tickettailorwebhooklambdaServiceRole8D9E481D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ticket-tailor-webhook",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "tickettailorwebhooklambdaServiceRoleDefaultPolicyE88BB4F9": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/ticket-tailor-webhook/ticket-tailor-webhook.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/ticket-tailor-webhook",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/ticket-tailor-webhook/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "tickettailorwebhooklambdaServiceRoleDefaultPolicyE88BB4F9",
        "Roles": [
          {
            "Ref": "tickettailorwebhooklambdaServiceRole8D9E481D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODEANY80D99D22": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "tickettailorwebhooklambdaEF743C00",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODEANYApiPermissionTesttickettailorwebhookCODEtickettailorwebhooklambdatickettailorwebhookCODEEC287915ANY862408EC": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdaEF743C00",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODEANYApiPermissiontickettailorwebhookCODEtickettailorwebhooklambdatickettailorwebhookCODEEC287915ANY3F70E072": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdaEF743C00",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
              },
              "/",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookCODEDeploymentStageCODE4D82F771",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODEAccount436C74C5": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdatickettailorwebhookCODECloudWatchRole49C92E42",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODECloudWatchRole49C92E42": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ticket-tailor-webhook",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODED417109B": {
      "Properties": {
        "Description": "API Gateway created by CDK",
        "Name": "ticket-tailor-webhook-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "ticket-tailor-webhook",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODEDeployment6B505C02d890a10b52f333588fe5a87da73928af": {
      "DependsOn": [
        "tickettailorwebhooklambdatickettailorwebhookCODEproxyANY1BAF006E",
        "tickettailorwebhooklambdatickettailorwebhookCODEproxy66C8920B",
        "tickettailorwebhooklambdatickettailorwebhookCODEANY80D99D22",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODEDeploymentStageCODE4D82F771": {
      "DependsOn": [
        "tickettailorwebhooklambdatickettailorwebhookCODEAccount436C74C5",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookCODEDeployment6B505C02d890a10b52f333588fe5a87da73928af",
        },
        "RestApiId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
        },
        "StageName": "CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "ticket-tailor-webhook",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODEproxy66C8920B": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODEproxyANY1BAF006E": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "tickettailorwebhooklambdaEF743C00",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookCODEproxy66C8920B",
        },
        "RestApiId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODEproxyANYApiPermissionTesttickettailorwebhookCODEtickettailorwebhooklambdatickettailorwebhookCODEEC287915ANYproxyF938D880": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdaEF743C00",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "tickettailorwebhooklambdatickettailorwebhookCODEproxyANYApiPermissiontickettailorwebhookCODEtickettailorwebhooklambdatickettailorwebhookCODEEC287915ANYproxy11973929": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdaEF743C00",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookCODED417109B",
              },
              "/",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookCODEDeploymentStageCODE4D82F771",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;

exports[`The Ticket tailor webhook stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuApiGateway5xxPercentageAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "tickettailorwebhooklambdatickettailorwebhookPRODEndpoint1214E482": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "tickettailorwebhooklambdatickettailorwebhookPRODDeploymentStagePROD4AA66CAD",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGateway4XXAlarmCDKC83EACCA": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - Ticket tailor webhook received an invalid request. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "TICKET-TAILOR-WEBHOOK-PROD API gateway 4XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "ticket-tailor-webhook-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ApiGatewayHigh5xxPercentageAlarmTickettailorwebhook77367DFB": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "ticket-tailor-webhook exceeded 5% error rate",
        "AlarmName": "High 5XX error percentage from ticket-tailor-webhook (ApiGateway) in PROD",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "100*m1/m2",
            "Id": "expr_1",
            "Label": "% of 5XX responses served for ticket-tailor-webhook",
          },
          {
            "Id": "m1",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "ticket-tailor-webhook-PROD",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m2",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "ticket-tailor-webhook-PROD",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "SampleCount",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "S3inlinepolicy3B07399A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/membership/PROD/ticket-tailor-webhook/",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicy3B07399A",
        "Roles": [
          {
            "Ref": "tickettailorwebhooklambdaServiceRole8D9E481D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "tickettailorwebhooklambdaEF743C00": {
      "DependsOn": [
        "tickettailorwebhooklambdaServiceRoleDefaultPolicyE88BB4F9",
        "tickettailorwebhooklambdaServiceRole8D9E481D",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/ticket-tailor-webhook/ticket-tailor-webhook.zip",
        },
        "Description": "An API Gateway triggered lambda generated in the support-service-lambdas repo",
        "Environment": {
          "Variables": {
            "APP": "ticket-tailor-webhook",
            "App": "ticket-tailor-webhook",
            "STACK": "membership",
            "STAGE": "PROD",
            "Stack": "membership",
            "Stage": "PROD",
          },
        },
        "FunctionName": "ticket-tailor-webhook-PROD",
        "Handler": "index.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdaServiceRole8D9E481D",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "ticket-tailor-webhook",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "tickettailorwebhooklambdaServiceRole8D9E481D": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ticket-tailor-webhook",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "tickettailorwebhooklambdaServiceRoleDefaultPolicyE88BB4F9": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/ticket-tailor-webhook/ticket-tailor-webhook.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/ticket-tailor-webhook",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/ticket-tailor-webhook/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "tickettailorwebhooklambdaServiceRoleDefaultPolicyE88BB4F9",
        "Roles": [
          {
            "Ref": "tickettailorwebhooklambdaServiceRole8D9E481D",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264": {
      "Properties": {
        "Description": "API Gateway created by CDK",
        "Name": "ticket-tailor-webhook-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "ticket-tailor-webhook",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "tickettailorwebhooklambdatickettailorwebhookPRODANY8E359EE4": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "tickettailorwebhooklambdaEF743C00",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "tickettailorwebhooklambdatickettailorwebhookPRODANYApiPermissionTesttickettailorwebhookPRODtickettailorwebhooklambdatickettailorwebhookPROD473619E1ANYA64EA26D": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdaEF743C00",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "tickettailorwebhooklambdatickettailorwebhookPRODANYApiPermissiontickettailorwebhookPRODtickettailorwebhooklambdatickettailorwebhookPROD473619E1ANYADF8EFD7": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdaEF743C00",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
              },
              "/",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookPRODDeploymentStagePROD4AA66CAD",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "tickettailorwebhooklambdatickettailorwebhookPRODAccountC37A65C1": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdatickettailorwebhookPRODCloudWatchRole57044912",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "tickettailorwebhooklambdatickettailorwebhookPRODCloudWatchRole57044912": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ticket-tailor-webhook",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "tickettailorwebhooklambdatickettailorwebhookPRODDeploymentF02C84D366ef14a7fc6ff211070079b239a279c0": {
      "DependsOn": [
        "tickettailorwebhooklambdatickettailorwebhookPRODproxyANY164D253A",
        "tickettailorwebhooklambdatickettailorwebhookPRODproxy2FACC77C",
        "tickettailorwebhooklambdatickettailorwebhookPRODANY8E359EE4",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "tickettailorwebhooklambdatickettailorwebhookPRODDeploymentStagePROD4AA66CAD": {
      "DependsOn": [
        "tickettailorwebhooklambdatickettailorwebhookPRODAccountC37A65C1",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookPRODDeploymentF02C84D366ef14a7fc6ff211070079b239a279c0",
        },
        "RestApiId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
        },
        "StageName": "PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "ticket-tailor-webhook",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "tickettailorwebhooklambdatickettailorwebhookPRODproxy2FACC77C": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "tickettailorwebhooklambdatickettailorwebhookPRODproxyANY164D253A": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "tickettailorwebhooklambdaEF743C00",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookPRODproxy2FACC77C",
        },
        "RestApiId": {
          "Ref": "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "tickettailorwebhooklambdatickettailorwebhookPRODproxyANYApiPermissionTesttickettailorwebhookPRODtickettailorwebhooklambdatickettailorwebhookPROD473619E1ANYproxy9DC760BB": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdaEF743C00",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "tickettailorwebhooklambdatickettailorwebhookPRODproxyANYApiPermissiontickettailorwebhookPRODtickettailorwebhooklambdatickettailorwebhookPROD473619E1ANYproxyC991263B": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "tickettailorwebhooklambdaEF743C00",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookPROD2CFFB264",
              },
              "/",
              {
                "Ref": "tickettailorwebhooklambdatickettailorwebhookPRODDeploymentStagePROD4AA66CAD",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
